dyntopo won't collapse unmasked verts while masking is active #36930

Closed
opened 2013-10-03 14:35:58 +02:00 by Danny McGrath · 5 comments
Member

%%%--- Operating System, Graphics card ---
Ubuntu 12.04 64bit

- Blender version with error, and version that worked ---

r60526

- Short description of error ---

I had some stubborn verts in the attached blend that refused to collapse. Apparently disabling the mask fixed it.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • Open the attached blend
  • Enable sculpt/dyntopo
  • Make sure collapse is activated
  • switch to shaded to see the mask is active
  • Try to smooth/draw/etc the greased verts, doesn't work
  • Alt-m to disable the mask and then you can

%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.04 64bit - Blender version with error, and version that worked --- r60526 - Short description of error --- I had some stubborn verts in the attached blend that refused to collapse. Apparently disabling the mask fixed it. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - Open the attached blend - Enable sculpt/dyntopo - Make sure collapse is activated - switch to shaded to see the mask is active - Try to smooth/draw/etc the greased verts, doesn't work - Alt-m to disable the mask and then you can %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%If i understand your issue correct, it's actually caused by the fact vertices are actually masked out. Here's in attachments mask with higher contrast, so you might easily see this. And i think it's expected that masked areas are not affected by topology changes?

Perhaps we'd rather add some different types of mask visualization (i.e. add contrast slider, or use rainbow colors instead of grayscale)?%%%

%%%If i understand your issue correct, it's actually caused by the fact vertices are actually masked out. Here's in attachments mask with higher contrast, so you might easily see this. And i think it's expected that masked areas are not affected by topology changes? Perhaps we'd rather add some different types of mask visualization (i.e. add contrast slider, or use rainbow colors instead of grayscale)?%%%

%%%I think the problem isn't so much that the mask isn't visible, but the behavior of partially masked vertices. You can still sculpt them, the influence is just less, so it's strange that dynamic topology doesn't work on them.

Currently check_mask_half in pbvh_mesh.c will only do splits if the mask is < 50%. This doesn't make sense to me, why would you not update the topology if the vertices moved, such an arbitrary cutoff is going to give a sharp cutoff in the mesh. If the mask makes the brush influence smaller, then the vertices will be moved less and so edge splits will happen less too, I think that should be enough?

I tried a quick change to that value, but it gives strange results, like a kind of fractal shape around the masked areas, I think the paint mask is not being subdivided correctly.%%%

%%%I think the problem isn't so much that the mask isn't visible, but the behavior of partially masked vertices. You can still sculpt them, the influence is just less, so it's strange that dynamic topology doesn't work on them. Currently check_mask_half in pbvh_mesh.c will only do splits if the mask is < 50%. This doesn't make sense to me, why would you not update the topology if the vertices moved, such an arbitrary cutoff is going to give a sharp cutoff in the mesh. If the mask makes the brush influence smaller, then the vertices will be moved less and so edge splits will happen less too, I think that should be enough? I tried a quick change to that value, but it gives strange results, like a kind of fractal shape around the masked areas, I think the paint mask is not being subdivided correctly.%%%

%%%Fix committed to svn now in revision 60548, for the dynamic topology behavior.

The mask visualization could be changed, but the fact that slightly influenced vertices show only faintly is pretty much what I would expect. Something like a rainbow color could be used but that gets in the way of seeing the mesh too.%%%

%%%Fix committed to svn now in revision 60548, for the dynamic topology behavior. The mask visualization could be changed, but the fact that slightly influenced vertices show only faintly is pretty much what I would expect. Something like a rainbow color could be used but that gets in the way of seeing the mesh too.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36930
No description provided.